# xtask-cmd-wrappers

./: Cargo.toml  license  readme.md
.github/workflows/: rust.yml
macro/: Cargo.toml
macro/src/: lib.rs
src/: cmd.rs  lib.rs  make.rs
tests/: echo.rs  make.rs
