[workspace]
members = ["macro"]
package.edition = "2021"
package.version = "0.1.0"
package.license = "MIT"
package.readme = "readme.md"
package.authors = ["Lowie Deferme <lowie.deferme@kuleuven.be>"]
package.categories = ["development-tools::build-utils"]
package.repository = "https://github.com/defermelowie/xtask-cmdwrap"

[package]
name = "xtask-cmdwrap"
description = "A thin wrapper around std::process::Command for xtask style projects"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
xtask-cmdwrap-macro = { path = "macro", version = "0.1.0"}

[features]
make = []
