[package]
name = "xtask-cmdwrap-macro"
description = "Procedural macros for xtask-cmdwrap"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
categories.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.20.11"
itertools = "0.14.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full"] }
